# ratatui-block

./: Cargo.toml  readme.md
docs/: .rustc_info.json
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
examples/: block1.rs  block2.rs  block3.rs  block4.rs  joints1.rs  joints2.rs  joints3.rs  joints4.rs
examples/mini_salsa/: mod.rs  theme.rs
src/: block_border.rs  block_connect.rs  block_grid.rs  block_joint.rs  border_symbols.rs  bottom.rs  bottom_left_cross.rs  bottom_left_down.rs  bottom_left_left.rs  bottom_right_cross.rs  bottom_right_down.rs  bottom_right_right.rs  create_border.rs  flip_sides.rs  horizontal_left.rs  horizontal_right.rs  joint_pos.rs  left.rs  lib.rs  new_block.rs  new_border.rs  new_joint.rs  right.rs  top.rs  top_left_cross.rs  top_left_left.rs  top_left_up.rs  top_right_cross.rs  top_right_right.rs  top_right_up.rs  v2.rs  v3.rs  vertical_bottom.rs  vertical_top.rs
src/block_joint/: bottom.rs  bottom_left_cross.rs  bottom_left_down.rs  bottom_left_left.rs  bottom_right_cross.rs  bottom_right_down.rs  bottom_right_right.rs  flip_sides.rs  left.rs  right.rs  top.rs  top_left_cross.rs  top_left_left.rs  top_right_cross.rs  top_right_right.rs  top_right_up.rs
src/block_joint__archived__/: bottom_left_cross.rs  bottom_left_down.rs  bottom_left_left.rs  bottom_right_right.rs  joint_pos.rs  right.rs  top.rs  top_left_up.rs
src/v2/: block_ext.rs  create_border.rs  mod.rs  render_joint.rs
src/v3/: border_symbols.rs  create_border.rs  mod.rs
src/v4/: mod.rs  (+2 more)
tests/: test_blockborder.rs  test_from_layout.rs
(+311 files in other folders)
