[package]
name = "ratatui-block"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", path = "../ratatui/ratatui" }
crossterm = "0.28"
log = "0.4"
unicode-segmentation = "1.11"
unicode-width = "0.2"
unicode-display-width = "0.3"
dyn-clone = "1.0.17"

rat-event = { version = "0.26", path = "../rat-event" }

[dev-dependencies]
fern = "0.7"
anyhow = "1.0"
